# SpiraDynamicGraphAnalyserBenchmark

./: .gitignore  CMakeLists.txt
docs/: benchmark_design.md
include/: armadillo_provider.h  csr_reference.h  eigen_provider.h  graph.h  mkl_provider.h  mutation.h  pagerank.h  provider.h  rmat.h  serialise.h  spira_provider.h  verify.h
scripts/: analyse.py  run_benchmarks.sh
src/: graph.cpp  main.cpp  mutation.cpp  pagerank.cpp  rmat.cpp  serialise.cpp  verify.cpp
src/providers/: armadillo_provider.cpp  csr_reference.cpp  eigen_provider.cpp  mkl_provider.cpp  spira_provider.cpp
